--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo/logo_full192.png",
+      "src": "logo/logo_cup_circle_v1.1_192",
       "type": "image/png",
       "sizes": "192x192"
     },
