--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 public/firebase-messaging-sw.js
+.firebaserc
+.firebase/hosting.YnVpbGQ.cache
+firebase.json
